[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/models/valve/valve.mesh" type="ArrayMesh" id=1]
[ext_resource path="res://assets/materials/psx.tres" type="Material" id=2]
[ext_resource path="res://assets/models/valve/Valve.gd" type="Script" id=3]
[ext_resource path="res://assets/sound/vault.wav" type="AudioStream" id=4]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( 1.25, 0, 0, 0.795495, 0.216506, -0.795495, 1.125, 0.216506, 0, 0.795495, 0.216506, -0.795495, 0.875, 0.216506, 0, 1.125, 0.216506, 0, 0.875, 0.216506, 0, 0.53033, 3.06162e-17, -0.53033, 0.75, 3.06162e-17, 0, 0.53033, 3.06162e-17, -0.53033, 0.875, -0.216506, 0, 0.75, 3.06162e-17, 0, 0.618718, -0.216506, -0.618719, 1.125, -0.216506, 0, 0.875, -0.216506, 0, 0.795495, -0.216506, -0.795495, 1.25, 0, 0, 1.125, -0.216506, 0, 9.43724e-08, 0, -1.25, 0.795495, 0.216506, -0.795495, 0.883883, 0, -0.883884, 6.60607e-08, 0.216506, -0.875, 0.618718, 0.216506, -0.618719, 6.60607e-08, 0.216506, -0.875, 0.53033, 3.06162e-17, -0.53033, 0.618718, 0.216506, -0.618719, 5.66234e-08, 3.06162e-17, -0.75, 0.618718, -0.216506, -0.618719, 0.53033, 3.06162e-17, -0.53033, 6.60607e-08, -0.216506, -0.875, 0.795495, -0.216506, -0.795495, 8.49351e-08, -0.216506, -1.125, 0.883883, 0, -0.883884, 0.795495, -0.216506, -0.795495, -0.883884, 0, -0.883883, 8.49351e-08, 0.216506, -1.125, 9.43724e-08, 0, -1.25, -0.795495, 0.216506, -0.795495, 8.49351e-08, 0.216506, -1.125, -0.618719, 0.216506, -0.618718, 5.66234e-08, 3.06162e-17, -0.75, 6.60607e-08, 0.216506, -0.875, -0.53033, 3.06162e-17, -0.53033, 6.60607e-08, -0.216506, -0.875, 5.66234e-08, 3.06162e-17, -0.75, -0.618719, -0.216506, -0.618718, 8.49351e-08, -0.216506, -1.125, -0.795495, -0.216506, -0.795495, 9.43724e-08, 0, -1.25, 8.49351e-08, -0.216506, -1.125, -1.25, 0, -1.09278e-07, -0.795495, 0.216506, -0.795495, -0.883884, 0, -0.883883, -1.125, 0.216506, -9.83506e-08, -0.618719, 0.216506, -0.618718, -0.875, 0.216506, -7.64949e-08, -0.53033, 3.06162e-17, -0.53033, -0.618719, 0.216506, -0.618718, -0.75, 3.06162e-17, -6.55671e-08, -0.618719, -0.216506, -0.618718, -0.53033, 3.06162e-17, -0.53033, -0.875, -0.216506, -7.64949e-08, -0.795495, -0.216506, -0.795495, -1.125, -0.216506, -9.83506e-08, -0.883884, 0, -0.883883, -0.795495, -0.216506, -0.795495, -0.883884, 0, 0.883883, -1.125, 0.216506, -9.83506e-08, -1.25, 0, -1.09278e-07, -0.795495, 0.216506, 0.795495, -0.875, 0.216506, -7.64949e-08, -0.618719, 0.216506, 0.618718, -0.75, 3.06162e-17, -6.55671e-08, -0.875, 0.216506, -7.64949e-08, -0.53033, 3.06162e-17, 0.53033, -0.875, -0.216506, -7.64949e-08, -0.75, 3.06162e-17, -6.55671e-08, -0.795495, -0.216506, 0.795495, -1.125, -0.216506, -9.83506e-08, -0.795495, -0.216506, 0.795495, -1.25, 0, -1.09278e-07, -1.125, -0.216506, -9.83506e-08, 9.43724e-08, 0, 1.25, -0.795495, 0.216506, 0.795495, -0.883884, 0, 0.883883, 8.49351e-08, 0.216506, 1.125, -0.618719, 0.216506, 0.618718, 6.60607e-08, 0.216506, 0.875, -0.53033, 3.06162e-17, 0.53033, -0.618719, 0.216506, 0.618718, 5.66234e-08, 3.06162e-17, 0.75, -0.618719, -0.216506, 0.618718, -0.53033, 3.06162e-17, 0.53033, -0.618719, -0.216506, 0.618718, 8.49351e-08, -0.216506, 1.125, 8.49351e-08, -0.216506, 1.125, -0.883884, 0, 0.883883, -0.795495, -0.216506, 0.795495, 0.883883, 0, 0.883884, 8.49351e-08, 0.216506, 1.125, 9.43724e-08, 0, 1.25, 0.618718, 0.216506, 0.618719, 6.60607e-08, 0.216506, 0.875, 0.618718, 0.216506, 0.618719, 5.66234e-08, 3.06162e-17, 0.75, 6.60607e-08, 0.216506, 0.875, 0.53033, 3.06162e-17, 0.53033, 6.60607e-08, -0.216506, 0.875, 5.66234e-08, 3.06162e-17, 0.75, 0.618718, -0.216506, 0.618719, 6.60607e-08, -0.216506, 0.875, 0.795495, -0.216506, 0.795496, 9.43724e-08, 0, 1.25, 8.49351e-08, -0.216506, 1.125, 1.25, 0, 0, 0.795495, 0.216506, 0.795496, 0.883883, 0, 0.883884, 0.795495, 0.216506, 0.795496, 0.875, 0.216506, 0, 0.53033, 3.06162e-17, 0.53033, 0.618718, 0.216506, 0.618719, 0.75, 3.06162e-17, 0, 0.618718, -0.216506, 0.618719, 0.53033, 3.06162e-17, 0.53033, 0.795495, -0.216506, 0.795496, 1.125, -0.216506, 0, 0.883883, 0, 0.883884, 0.795495, -0.216506, 0.795496, 0.086559, -0.961676, -0.0877186, 1.06834, -0.197812, 0.0830768, 1.06834, -0.197812, -0.0885589, 0.086559, -0.961676, 0.0839171, 0.896708, -0.197812, 0.0830768, 1.06834, -0.197812, 0.0830768, 0.896708, -0.197812, 0.0830768, -0.0850767, -0.961676, -0.0877186, 0.896708, -0.197812, -0.0885589, 0.896708, -0.197812, -0.0885589, 0.086559, -0.961676, -0.0877186, 1.06834, -0.197812, -0.0885589, 0.896708, -0.197812, 0.0830768, 1.06834, -0.197812, -0.0885589, 1.06834, -0.197812, 0.0830768, 0.086559, -0.961676, 0.0839171, -0.0850767, -0.961676, -0.0877186, -0.0850767, -0.961676, 0.0839171, -0.0851958, -0.977401, -0.0893813, 0.100763, -0.213537, -1.06841, -0.0708525, -0.213537, -1.07106, 0.0864193, -0.977401, -0.086727, 0.0981081, -0.213537, -0.896792, 0.100763, -0.213537, -1.06841, 0.0981081, -0.213537, -0.896792, -0.0878502, -0.977401, 0.0822338, -0.0735069, -0.213537, -0.899446, -0.0735069, -0.213537, -0.899446, -0.0851958, -0.977401, -0.0893813, -0.0708525, -0.213537, -1.07106, 0.0864193, -0.977401, -0.086727, -0.0878502, -0.977401, 0.0822338, 0.0837649, -0.977401, 0.0848882, 0.100763, -0.213537, -1.06841, -0.0735069, -0.213537, -0.899446, -0.0708525, -0.213537, -1.07106, 0.0848836, -0.977401, 0.0838138, -0.0889015, -0.213537, 1.06507, 0.0827332, -0.213537, 1.0656, -0.0867512, -0.977401, 0.0832911, -0.0883787, -0.213537, 0.893438, -0.0889015, -0.213537, 1.06507, -0.0883787, -0.213537, 0.893438, 0.0854065, -0.977401, -0.0878211, 0.0832561, -0.213537, 0.893961, 0.0832561, -0.213537, 0.893961, 0.0848836, -0.977401, 0.0838138, 0.0827332, -0.213537, 1.0656, -0.0862284, -0.977401, -0.0883438, 0.0848836, -0.977401, 0.0838138, 0.0854065, -0.977401, -0.0878211, -0.0889015, -0.213537, 1.06507, 0.0832561, -0.213537, 0.893961, 0.0827332, -0.213537, 1.0656, -0.0789323, -0.977401, 0.0890294, -1.05876, -0.213537, -0.0926617, -1.06067, -0.213537, 0.0789632, -0.0770258, -0.977401, -0.0825956, -0.887133, -0.213537, -0.090755, -1.05876, -0.213537, -0.0926617, -0.887133, -0.213537, -0.090755, 0.0926929, -0.977401, 0.0909361, -0.88904, -0.213537, 0.0808699, -0.88904, -0.213537, 0.0808699, -0.0789323, -0.977401, 0.0890294, -1.06067, -0.213537, 0.0789632, 0.0945994, -0.977401, -0.080689, -0.0789323, -0.977401, 0.0890294, 0.0926929, -0.977401, 0.0909361, -1.05876, -0.213537, -0.0926617, -0.88904, -0.213537, 0.0808699, -1.06067, -0.213537, 0.0789632, 1.25, 0, 0, 0.883883, 0, -0.883884, 0.795495, 0.216506, -0.795495, 0.875, 0.216506, 0, 0.618718, 0.216506, -0.618719, 0.53033, 3.06162e-17, -0.53033, 0.53033, 3.06162e-17, -0.53033, 0.618718, -0.216506, -0.618719, 0.875, -0.216506, 0, 0.795495, -0.216506, -0.795495, 0.883883, 0, -0.883884, 1.25, 0, 0, 9.43724e-08, 0, -1.25, 8.49351e-08, 0.216506, -1.125, 0.795495, 0.216506, -0.795495, 5.66234e-08, 3.06162e-17, -0.75, 6.60607e-08, -0.216506, -0.875, 8.49351e-08, -0.216506, -1.125, 9.43724e-08, 0, -1.25, 0.883883, 0, -0.883884, -0.883884, 0, -0.883883, -0.795495, 0.216506, -0.795495, 8.49351e-08, 0.216506, -1.125, -0.53033, 3.06162e-17, -0.53033, -0.53033, 3.06162e-17, -0.53033, -0.618719, -0.216506, -0.618718, 6.60607e-08, -0.216506, -0.875, -0.795495, -0.216506, -0.795495, -0.883884, 0, -0.883883, 9.43724e-08, 0, -1.25, -1.25, 0, -1.09278e-07, -1.125, 0.216506, -9.83506e-08, -0.795495, 0.216506, -0.795495, -0.875, 0.216506, -7.64949e-08, -0.75, 3.06162e-17, -6.55671e-08, -0.53033, 3.06162e-17, -0.53033, -0.75, 3.06162e-17, -6.55671e-08, -0.875, -0.216506, -7.64949e-08, -0.618719, -0.216506, -0.618718, -1.125, -0.216506, -9.83506e-08, -1.25, 0, -1.09278e-07, -0.883884, 0, -0.883883, -0.883884, 0, 0.883883, -0.795495, 0.216506, 0.795495, -1.125, 0.216506, -9.83506e-08, -0.618719, 0.216506, 0.618718, -0.53033, 3.06162e-17, 0.53033, -0.75, 3.06162e-17, -6.55671e-08, -0.53033, 3.06162e-17, 0.53033, -0.618719, -0.216506, 0.618718, -0.875, -0.216506, -7.64949e-08, -0.883884, 0, 0.883883, 9.43724e-08, 0, 1.25, 8.49351e-08, 0.216506, 1.125, -0.795495, 0.216506, 0.795495, 5.66234e-08, 3.06162e-17, 0.75, 5.66234e-08, 3.06162e-17, 0.75, 6.60607e-08, -0.216506, 0.875, -0.618719, -0.216506, 0.618718, 8.49351e-08, -0.216506, 1.125, 9.43724e-08, 0, 1.25, -0.883884, 0, 0.883883, 0.883883, 0, 0.883884, 0.795495, 0.216506, 0.795496, 8.49351e-08, 0.216506, 1.125, 0.618718, 0.216506, 0.618719, 0.53033, 3.06162e-17, 0.53033, 5.66234e-08, 3.06162e-17, 0.75, 0.53033, 3.06162e-17, 0.53033, 0.618718, -0.216506, 0.618719, 6.60607e-08, -0.216506, 0.875, 0.795495, -0.216506, 0.795496, 0.883883, 0, 0.883884, 9.43724e-08, 0, 1.25, 1.25, 0, 0, 1.125, 0.216506, 0, 0.795495, 0.216506, 0.795496, 0.875, 0.216506, 0, 0.75, 3.06162e-17, 0, 0.53033, 3.06162e-17, 0.53033, 0.75, 3.06162e-17, 0, 0.875, -0.216506, 0, 0.618718, -0.216506, 0.618719, 1.125, -0.216506, 0, 1.25, 0, 0, 0.883883, 0, 0.883884, 0.086559, -0.961676, 0.0839171, -0.0850767, -0.961676, 0.0839171, -0.0850767, -0.961676, 0.0839171, -0.0850767, -0.961676, -0.0877186, 0.896708, -0.197812, -0.0885589, 0.086559, -0.961676, -0.0877186, -0.0851958, -0.977401, -0.0893813, 0.0864193, -0.977401, -0.086727, 0.100763, -0.213537, -1.06841, 0.0864193, -0.977401, -0.086727, 0.0837649, -0.977401, 0.0848882, 0.0981081, -0.213537, -0.896792, 0.0837649, -0.977401, 0.0848882, -0.0735069, -0.213537, -0.899446, -0.0878502, -0.977401, 0.0822338, -0.0851958, -0.977401, -0.0893813, -0.0851958, -0.977401, -0.0893813, 0.0981081, -0.213537, -0.896792, 0.0848836, -0.977401, 0.0838138, -0.0867512, -0.977401, 0.0832911, -0.0889015, -0.213537, 1.06507, -0.0867512, -0.977401, 0.0832911, -0.0862284, -0.977401, -0.0883438, -0.0883787, -0.213537, 0.893438, -0.0862284, -0.977401, -0.0883438, 0.0832561, -0.213537, 0.893961, 0.0854065, -0.977401, -0.0878211, 0.0848836, -0.977401, 0.0838138, -0.0867512, -0.977401, 0.0832911, -0.0883787, -0.213537, 0.893438, -0.0789323, -0.977401, 0.0890294, -0.0770258, -0.977401, -0.0825956, -1.05876, -0.213537, -0.0926617, 0.0945994, -0.977401, -0.080689, -0.887133, -0.213537, -0.090755, 0.0945994, -0.977401, -0.080689, 0.0926929, -0.977401, 0.0909361, 0.0926929, -0.977401, 0.0909361, -0.0770258, -0.977401, -0.0825956, -0.887133, -0.213537, -0.090755 )

[node name="Valve" type="Spatial"]
script = ExtResource( 3 )

[node name="ValveBody" type="RigidBody" parent="."]
gravity_scale = 0.0

[node name="valve" type="MeshInstance" parent="ValveBody"]
transform = Transform( 0.35, 0, 0, 0, -1.5299e-08, -0.35, 0, 0.35, -1.5299e-08, 0, 0, 0 )
mesh = ExtResource( 1 )
material/0 = ExtResource( 2 )

[node name="CollisionShape2" type="CollisionShape" parent="ValveBody"]
transform = Transform( 0.35, 0, 0, 0, -1.5299e-08, -0.35, 0, 0.35, -1.5299e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="JointSpawn" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.341173 )

[node name="VaultPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
